--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
       </p>
 
       <figure class="figure">
-        <!-- Put image in ./assets/agentic_lifecycle.png and update the src if needed -->
-        <img src="assets/agentic_lifecycle.png" alt="ATLIS: Agentic lifecycle and layered interpretability stack" />
+        <img src="assets/ATLIS-framework.pdf" alt="ATLIS: Agentic lifecycle and layered interpretability stack" />
         <figcaption>
-          Agentic Lifecycle &amp; Layered Interpretability Stack (ATLIS). (Update caption)
+          ATLIS (Agentic Trajectory & Layered Interpretability Stack) is an agentic deployment lifecycle and integrated interpretability stack for Agentic AI systems. This framework integrates five interpretability layers across the Agentic AI system lifecycle: (1) Real-Time Behavioral Monitoring tracks observable agent actions; (2) Mechanistic Circuit Analysis examines internal model representations; (3) Abstraction-Level Bridging connects low-level circuits to high-level reasoning; (4) Multi-Agent Analysis evaluates coordination dynamics; and (5) Safety and Alignment ensures adherence to predefined objectives. It is important to highlight that the framework incorporates two loops: blue arrows denote the monitoring refinement feedback loop, while orange arrows denote the safety and alignment revision loop. Computational overhead ranges from low (Layer 1 continuous monitoring) to high (Layer 2 full circuit extraction during incident response).
         </figcaption>
       </figure>
     </section>
