--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
       <p class="muted">
         Add illustrative Hospital Use Case.
       </p>
+
+      <figure class="figure">
+        <img src="assets/ICML Illustrative Example Diagram.pdf" alt="Illustrative Example: Palliative-Care Referral" />
+        <figcaption>
+          Illustrative Example of using ATLIS for disease diagnosis.
+      </figure>
     </section>
 
     <section id="call-to-action" class="section">
