--- a/index.html
+++ b/index.html
@@ -92,10 +92,16 @@
       </p>
 
       <figure class="figure">
-        <iframe src="assets/ATLIS-framework.pdf" class="pdf" title="ATLIS framework figure"></iframe>
+        <object data="assets/ATLIS-framework.pdf" type="application/pdf" class="pdf">
+          <p class="muted">
+            Your browser can’t display PDFs inline.
+            <a href="assets/ATLIS-framework.pdf">Open the figure PDF</a>.
+          </p>
+        </object>
         <figcaption>
           ATLIS (Agentic Trajectory & Layered Interpretability Stack) is an agentic deployment lifecycle and integrated interpretability stack for Agentic AI systems. This framework integrates five interpretability layers across the Agentic AI system lifecycle: (1) Real-Time Behavioral Monitoring tracks observable agent actions; (2) Mechanistic Circuit Analysis examines internal model representations; (3) Abstraction-Level Bridging connects low-level circuits to high-level reasoning; (4) Multi-Agent Analysis evaluates coordination dynamics; and (5) Safety and Alignment ensures adherence to predefined objectives. It is important to highlight that the framework incorporates two loops: blue arrows denote the monitoring refinement feedback loop, while orange arrows denote the safety and alignment revision loop. Computational overhead ranges from low (Layer 1 continuous monitoring) to high (Layer 2 full circuit extraction during incident response).
         </figcaption>
+      </figure>
     </section>
 
     <section id="case-study" class="section">
