--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         </object>
         <figcaption>
           Illustrative Example of using ATLIS for disease diagnosis.
+        </figcaption>
       </figure>
     </section>
 
