index.html and update BibTeX

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <div class="is-size-5 publication-authors">
               <span class="author-block">Judy Zhu</span>,
               <span class="author-block">Dhari Gandhi</span>,
-              <span class="author-block">Ahmad Rezaie Mianroodi</span>,
               <span class="author-block">Dhanesh Ramachandran</span>,
+              <span class="author-block">Ahmad Rezaie Mianroodi</span>,
               <span class="author-block">Shaina Raza</span>,
               <span class="author-block">Sedef Akinli Kocak</span>
             </div>
@@ -274,7 +274,7 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>@inproceedings{atlis2026position,
   title     = {Position: As we move from models to systems, we need and should use the Agentic Trajectory and Layered Interpretability Stack (ATLIS)},
-  author    = {Zhu, Judy and Gandhi, Dhari and Mianroodi, Ahmad Rezaie and Ramachandran, Dhanesh and Raza, Shaina and Kocak, Sedef Akinli},
+  author    = {Zhu, Judy and Gandhi, Dhari Ramachandran, Dhanesh and Rezaie Mianroodi, Ahmad and  and Raza, Shaina and Kocak, Sedef Akinli},
   booktitle = {International Conference on Machine Learning (ICML) Position Paper},
   year      = {2026},
   note      = {Under review}
